[project]
name = "my-graphrag"
version = "0.1.0"
description = "A Python project"
authors = [
    {name = "Your Name"},
]
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "graphrag==2.1.0",
    "mcp[cli]>=1.6.0",
    "httpx>=0.28.1",
    "markdown",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "requests>=2.32.3",
    "pytest>=8.3.5",
]

[project.scripts]
start = "graphrag.app:main"
test = "pytest:main"
lint = "pylint:run_pylint"

[tool.uv]
# 使用镜像源代替官方PyPI
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.hatch.build.targets.wheel]
packages = ["graphrag"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

